integ-tests/tests/snapshots/parser__table_9_reverse_valid.snap
---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
{
  "fruit": {
    "apple": {
      "texture": {
        "smooth": true
      },
      "color": "red",
      "taste": {
        "sweet": true
      }
    }
  }
}
