integ-tests/tests/snapshots/parser__trailing_comma-2.snap
---
source: integ-tests/tests/parser.rs
expression: spans
---
note[integer]: root_a_a
  ┌─ trailing_comma:1:8
  │
1 │ a = {a=1,}
  │        ^

note[table]: root_a
  ┌─ trailing_comma:1:5
  │
1 │ a = {a=1,}
  │     ^^^^^^

note[table]: root
  ┌─ trailing_comma:1:1
  │
1 │ a = {a=1,}
  │ ^^^^^^^^^^
